#  Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[workspace.package]
authors = [
    "Rowan Hart <rowan.hart@intel.com>",
    "Brandon Marken <brandon.marken@intel.com>",
    "Robert Geunzel <robert.geunzel@intel.com>",
]
categories = ["development-tools::testing", "emulators", "simulation"]
description = "A snapshotting, coverage-guided fuzzer for software (UEFI, Kernel, firmware, BIOS) built on SIMICS"
edition = "2021"
homepage = "https://github.com/intel/tsffs"
keywords = ["SIMICS", "fuzzing", "security", "testing", "simulator"]
license = "Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/intel/tsffs"
version = "0.2.0"

[workspace.metadata]
build-id = 1
version = "6.0.0"

[workspace]
resolver = "2"
members = [
    "modules/tsffs/tests",
    "modules/tsffs/src/tsffs",
    "modules/tsffs/src/simics/ispm-wrapper",
    "modules/tsffs/src/simics/simics-api-sys",
    "modules/tsffs/src/simics/simics-macro",
    "modules/tsffs/src/simics/simics-codegen",
    "modules/tsffs/src/simics/simics",

    "modules/tsffs/src/util/command-ext",
    "modules/tsffs/src/util/ffi-macro",
    "modules/tsffs/src/util/getters",
    "modules/tsffs/src/util/raw-cstr",
    "modules/tsffs/src/util/version-tools",
]
default-members = [
    "modules/tsffs/tests",
    "modules/tsffs/src/tsffs",
    "modules/tsffs/src/simics/ispm-wrapper",
    "modules/tsffs/src/simics/simics-api-sys",
    "modules/tsffs/src/simics/simics-macro",
    "modules/tsffs/src/simics/simics-codegen",
    "modules/tsffs/src/simics/simics",

    "modules/tsffs/src/util/command-ext",
    "modules/tsffs/src/util/ffi-macro",
    "modules/tsffs/src/util/getters",
    "modules/tsffs/src/util/raw-cstr",
    "modules/tsffs/src/util/version-tools",
]
exclude = []

[workspace.dependencies]
simics-api-sys = { path = "modules/tsffs/src/simics/simics-api-sys" }
simics-macro = { path = "modules/tsffs/src/simics/simics-macro" }
simics-codegen = { path = "modules/tsffs/src/simics/simics-codegen" }
simics = { path = "modules/tsffs/src/simics/simics" }
ispm-wrapper = { path = "modules/tsffs/src/simics/ispm-wrapper" }

command-ext = { path = "modules/tsffs/src/util/command-ext" }
ffi-macro = { path = "modules/tsffs/src/util/ffi-macro" }
getters = { path = "modules/tsffs/src/util/getters" }
raw-cstr = { path = "modules/tsffs/src/util/raw-cstr" }
version-tools = { path = "modules/tsffs/src/util/version-tools" }

anyhow = { version = "1.0.75" }
libafl = { git = "https://github.com/AFLplusplus/LibAFL" }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL" }
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL", default-features = false, features = [
    "std",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }
versions = { version = "5.0.1", features = ["serde"] }


[profile.dev]
rpath = true

[profile.release]
rpath = true
lto = true
codegen-units = 1
opt-level = 3
debug = true
