#  Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tsffs"
authors = [
    "Rowan Hart <rowan.hart@intel.com>",
    "Brandon Marken <brandon.marken@intel.com>",
    "Robert Geunzel <robert.geunzel@intel.com>",
]
categories = ["development-tools::testing", "emulators", "simulation"]
description = "A snapshotting, coverage-guided fuzzer for software (UEFI, Kernel, firmware, BIOS) built on SIMICS"
edition = "2021"
homepage = "https://github.com/intel/tsffs"
keywords = ["SIMICS", "fuzzing", "security", "testing", "simulator"]
license = "Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/intel/tsffs"
version = "0.2.1"

[package.metadata.simics]
package-number = 31337
version = "6.1.3"

[lib]
crate-type = ["cdylib", "rlib"]
test = false

[dependencies]
anyhow = { version = "1.0.80" }
libafl = { git = "https://github.com/AFLplusplus/LibAFL", rev = "0f26f6ea32aa74ee526636558842ec06bbfb49bb", default-features = false, features = [
    "std",
    "derive",
    "llmp_compression",
    "llmp_small_maps",
    "llmp_broker_timeouts",
    "rand_trait",
    "fork",
    "prelude",
    "gzip",
    "regex",
    "serdeany_autoreg",
] }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", rev = "0f26f6ea32aa74ee526636558842ec06bbfb49bb", features = [
    "xxh3",
] }
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL", rev = "0f26f6ea32aa74ee526636558842ec06bbfb49bb", default-features = false, features = [
    "std",
] }
yaxpeax-arch = { version = "0.2.7", default-features = false, features = [
    "std",
    "use-serde",
] }
yaxpeax-x86 = { version = "1.2.2", default-features = false, features = [
    "std",
    "use-serde",
    "fmt",
] }
typed-builder = "0.18.1"
raw-cstr = "0.1.4"
goblin = "0.8.0"
yaxpeax-riscv = { git = "https://github.com/DrChat/yaxpeax-riscv", version = "0.1.0", features = [
    "serde",
], rev = "0e2151b" }
crc32fast = "1.4.0"
simics = { path = "simics-rs/simics" }
indoc = "2.0.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
versions = { version = "6.1.0", features = ["serde"] }
ffi = "0.1.1"
num-traits = "0.2.18"
num-derive = "0.4.2"
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = ["log"] }
yaxpeax-arm = "0.2.5"
chrono = "0.4.38"

[dev-dependencies]
simics-test = { path = "simics-rs/simics-test" }
anyhow = "1.0.80"
command-ext = "0.1.2"
indoc = "2.0.4"
ispm-wrapper = { path = "simics-rs/ispm-wrapper" }
versions = { version = "6.1.0", features = ["serde"] }

[build-dependencies]
simics = { path = "simics-rs/simics" }
simics-build-utils = { path = "simics-rs/simics-build-utils" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
