#  Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "tsffs"
authors = [
    "Rowan Hart <rowan.hart@intel.com>",
    "Brandon Marken <brandon.marken@intel.com>",
    "Robert Geunzel <robert.geunzel@intel.com>",
]
categories = ["development-tools::testing", "emulators", "simulation"]
description = "A snapshotting, coverage-guided fuzzer for software (UEFI, Kernel, firmware, BIOS) built on SIMICS"
edition = "2021"
homepage = "https://github.com/intel/tsffs"
keywords = ["SIMICS", "fuzzing", "security", "testing", "simulator"]
license = "Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/intel/tsffs"
version = "0.2.2"

[package.metadata.simics]
package-number = 31337
version = "6.1.4"

[lib]
crate-type = ["cdylib", "rlib"]
test = false

[dependencies]
anyhow = { version = "1.0.86" }
libafl = { git = "https://github.com/AFLplusplus/LibAFL", rev = "0f26f6ea32aa74ee526636558842ec06bbfb49bb", default-features = false, features = [
    "std",
    "derive",
    "llmp_compression",
    "llmp_small_maps",
    "llmp_broker_timeouts",
    "rand_trait",
    "fork",
    "prelude",
    "gzip",
    "regex",
    "serdeany_autoreg",
] }
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", rev = "0f26f6ea32aa74ee526636558842ec06bbfb49bb", features = [
    "xxh3",
] }
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL", rev = "0f26f6ea32aa74ee526636558842ec06bbfb49bb", default-features = false, features = [
    "std",
] }
yaxpeax-arch = { version = "0.2.8", default-features = false, features = [
    "std",
    "use-serde",
] }
yaxpeax-x86 = { version = "1.2.2", default-features = false, features = [
    "std",
    "use-serde",
    "fmt",
] }
typed-builder = "0.18.2"
raw-cstr = "0.1.4"
goblin = "0.8.2"
yaxpeax-riscv = { git = "https://github.com/DrChat/yaxpeax-riscv", version = "0.1.0", features = [
    "serde",
], rev = "0e2151b" }
crc32fast = "1.4.2"
simics = "0.1.1"
indoc = "2.0.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
versions = { version = "6.2.0", features = ["serde"] }
ffi = "0.1.1"
num-traits = "0.2.19"
num-derive = "0.4.2"
tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = ["log"] }
yaxpeax-arm = "0.2.5"
chrono = "0.4.38"
vergilius = "0.1.2"
windows = { version = "0.57.0", features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
] }
reqwest = { version = "0.12.5", features = [
    "blocking",
    # NOTE: rustls is used because native-tls does not build with the
    # compatibility builder and we don't need any advanced features
    "rustls-tls",
], default-features = false }
pdb = "0.8.0"
intervaltree = "0.2.7"
lending-iterator = "0.1.7"
rustc-demangle = "0.1.24"
cpp_demangle = "0.4.3"

[dev-dependencies]
simics-test = "0.1.0"
anyhow = "1.0.86"
command-ext = "0.1.2"
indoc = "2.0.5"
ispm-wrapper = "0.1.0"
versions = { version = "6.2.0", features = ["serde"] }

[build-dependencies]
simics = "0.1.1"
simics-build-utils = "0.1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
