[package]
name = "confuse-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
env_logger = "0.10.0"
libafl = "0.9.0"
log = "0.4.17"
nix = "0.26.2"
memfd = "0.6.2"
memmap2 = "0.5.9"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tempfile = "3.3.0"
ipc-channel = { version = "0.16.0", features = ["memfd"] }
unix-ipc = "0.2.2"
