[package]
name = "confuse-host-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = "1.0.69"
lazy_static = "1.4.0"
libc = "0.2.139"
memmap2 = "0.5.8"

[build-dependencies]
anyhow = "1.0.69"
cbindgen = "0.24.3"
