[package]
name = "confuse-simics-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"

[build-dependencies]
anyhow = "1.0.69"
bindgen = "0.64.0"
dotenvy_macro = "0.15.1"
walkdir = "2.3.2"
confuse-simics-manifest = { workspace = true }
