[package]
name = "confuse-simics-manifest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
anyhow = "1.0.69"
version-compare = "0.1.1"
chrono = { version = "0.4.23", features = ["serde"] }
serde_repr = "0.1.10"
