[package]
name = "confuse-simics-modsign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confuse-simics-manifest = { workspace = true }
confuse-simics = { workspace = true }
chrono = "0.4.23"
anyhow = "1.0.69"
object = "0.30.3"
