[package]
name = "confuse-simics-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confuse-simics-manifest = { workspace = true }
confuse-simics-api = { workspace = true }
chrono = "0.4.23"
anyhow = "1.0.69"
object = "0.30.3"
whoami = "1.3.0"
cargo_metadata = "0.15.3"
log = "0.4.17"
