[package]
name = "confuse-simics-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenvy_macro = "0.15.1"
serde = "1.0.152"
serde_yaml = "0.9.17"
confuse-simics-manifest = { workspace = true }
confuse-simics-module = { workspace = true }
log = "0.4.17"
tempdir = "0.3.7"
walkdir = "2.3.2"
indoc = "2.0.1"
versions = "4.1.0"
version-tools.workspace = true

[build-dependencies]
confuse-simics-manifest = { workspace = true }
anyhow = "1.0.69"
const_format = "0.2.30"
dotenvy_macro = "0.15.1"
flate2 = "1.0.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tar = "0.4.38"
bindgen = "0.64.0"
walkdir = "2.3.2"
