[package]
name = "confuse-simics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
libafl = "0.9.0"
serde = "1.0.152"
serde_yaml = "0.9.17"

[build-dependencies]
anyhow = "1.0.69"
const_format = "0.2.30"
dotenvy_macro = "0.15.1"
flate2 = "1.0.25"
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tar = "0.4.38"
version-compare = "0.1.1"
yaml-rust = "0.4.5"
