[package]
name = "confuse-simics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenvy_macro = "0.15.1"
include_dir = "0.7.3"
serde = "1.0.152"
serde_yaml = "0.9.17"
confuse-simics-manifest = { workspace = true }

[build-dependencies]
confuse-simics-manifest = { workspace = true }
anyhow = "1.0.69"
const_format = "0.2.30"
dotenvy_macro = "0.15.1"
flate2 = "1.0.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
tar = "0.4.38"
bindgen = "0.64.0"
walkdir = "2.3.2"
