# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "include"
version = "0.1.0"
edition = "2021"
publish = false


[features]
"6.0.163" = ["tsffs_module/6.0.163"]
"6.0.164" = ["tsffs_module/6.0.164"]
"6.0.165" = ["tsffs_module/6.0.165"]
"6.0.166" = ["tsffs_module/6.0.166"]
"6.0.167" = ["tsffs_module/6.0.167"]
"6.0.168" = ["tsffs_module/6.0.168"]


[dependencies]
tsffs_module.workspace = true
# i386 = []
# i586 = []
# i686 = []
# x86_64 = []
# powerpc = []
# powerpc64 = []
# powerpc64le = []
# aarch64 = []
# arm = []
# armv7 = []
# "thumbv8m.main" = []
# "thumbv8m.base" = []
# "thumbv7m" = []
# "thumbv7em" = []
# "thumbv7a" = []
# mips = []
# mipsel = []
# mips64 = []
# mips64el = []
# riscv32gc = []
# riscv32i = []
# riscv32im = []
# riscv32imac = []
# riscv32imc = []
# riscv64gc = []
# riscv64imac = []
# 
# default = [
#     "i386",
#     "i586",
#     "i686",
#     "x86_64",
#     "powerpc",
#     "powerpc64",
#     "powerpc64le",
#     "aarch64",
#     "arm",
#     "armv7",
#     "thumbv8m.main",
#     "thumbv8m.base",
#     "thumbv7m",
#     "thumbv7em",
#     "thumbv7a",
#     "mips",
#     "mipsel",
#     "mips64",
#     "mips64el",
#     "riscv32gc",
#     "riscv32i",
#     "riscv32im",
#     "riscv32imac",
#     "riscv32imc",
#     "riscv64gc",
#     "riscv64imac",
# ]
