[package]
name = "ispm-wrapper"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
command-ext.workspace = true
derive-getters = "0.3.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
version-tools.workspace = true
versions = { version = "5.0.1", features = ["serde"] }
