# Copyright (C) 2023 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-api-macro"
categories.workspace = true
description = "High level SIMICS API proc macros"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
syn = { version = "2.0.15", features = ["full"] }
# simics-api = { workspace = true }
proc-macro2 = "1.0.56"
proc-macro-error = "1.0.4"
tracing = "0.1.37"

[dev-dependencies]

anyhow.workspace = true
raw-cstr.workspace = true
simics-api = { workspace = true }
trybuild = { version = "1.0.80", features = ["diff"] }


[features]
"6.0.163" = ["simics-api/6.0.163"]
"6.0.164" = ["simics-api/6.0.164"]
"6.0.165" = ["simics-api/6.0.165"]
"6.0.166" = ["simics-api/6.0.166"]
"6.0.167" = ["simics-api/6.0.167"]
"6.0.168" = ["simics-api/6.0.168"]
"6.0.169" = ["simics-api/6.0.169"]
"6.0.170" = ["simics-api/6.0.170"]
"6.0.171" = ["simics-api/6.0.171"]
"6.0.172" = ["simics-api/6.0.172"]
