[package]
name = "simics-api-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bindgen = "0.65.1"
bytes = "1.4.0"
clap = { version = "4.2.1", features = ["derive"] }
dockerfile-rs = "0.3.0"
flate2 = "1.0.25"
reqwest = { version = "0.11.16", features = ["blocking"] }
tar = "0.4.38"
tempfile = "3.5.0"
toml_edit = "0.19.8"
versions = "4.1.0"
walkdir = "2.3.3"

[features]
"6.0.154" = []
"6.0.160" = []
"6.0.157" = []
"6.0.155" = []
"6.0.156" = []
"6.0.153" = []
"6.0.152" = []
"6.0.161" = []
"6.0.158" = []
"6.0.162" = []
"6.0.150" = []
"6.0.151" = []
"6.0.159" = []
"6.0.148" = []
"6.0.149" = []
