[package]
name = "simics-api-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
"6.0.154" = []
"6.0.160" = []
"6.0.157" = []
"6.0.155" = []
"6.0.156" = []
"6.0.153" = []
"6.0.152" = []
"6.0.161" = []
"6.0.158" = []
"6.0.162" = []
"6.0.150" = []
"6.0.151" = []
"6.0.159" = []
"6.0.148" = []
"6.0.149" = []
"6.0.124" = []
"6.0.135" = []
"6.0.136" = []
"6.0.128" = []
"6.0.141" = []
"6.0.138" = []
"6.0.131" = []
"6.0.144" = []
"6.0.147" = []
"6.0.142" = []
"6.0.132" = []
"6.0.145" = []
"6.0.126" = []
"6.0.137" = []
"6.0.146" = []
"6.0.143" = []
"6.0.129" = []
"6.0.139" = []
"6.0.134" = []
"6.0.133" = []
"6.0.140" = []
"6.0.127" = []
"6.0.125" = []
"6.0.130" = []
